# num-quaternion

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN_RATIONALE.md  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  RELEASES.md  SECURITY.md  katex.html  rustfmt.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: cargo_build_and_test.yml
benches/: from_euler_angles_runtime.rs  from_rotation_vector_runtime.rs  norm.rs  norm_runtime.rs  to_rotation_vector_runtime.rs
benches/c++/: .bazelrc  .clang-format  .clang-tidy  BUILD.bazel  MODULE.bazel  from_euler_angles_runtime.cpp  from_rotation_vector_runtime.cpp  norm.cpp  norm_accuracy.cpp  norm_runtime.cpp  to_rotation_vector_runtime.cpp
ci/: bazel_build.bash  rustup.sh  test_coverage_llvm.sh  test_coverage_tarpaulin.sh  test_full.sh
docs/: how_to_run_benchmarks.md  research.md
examples/: benchmark_from_euler_angles_accuracy.rs  benchmark_norm_accuracy.rs  benchmark_rotation_vector_accuracy.rs  benchmark_to_rotation_vector_accuracy.rs  chebyshev_approximation.rs  pose_animation.rs
src/: arithmetics.rs  lib.rs  pure_quaternion.rs  quaternion.rs  unit_quaternion.rs
