[package]
authors = ["Ralph Tandetzky"]
description = "Quaternion numbers implementation for Rust"
documentation = "https://docs.rs/num-quaternion"
homepage = "https://github.com/ralphtandetzky/num-quaternion"
keywords = ["quaternion", "math", "algebra", "3d", "rotation"]
categories = ["algorithms", "data-structures", "science", "no-std", "mathematics"]
license = "MIT OR Apache-2.0"
name = "num-quaternion"
repository = "https://github.com/ralphtandetzky/num-quaternion"
version = "0.2.7"
readme = "README.md"
exclude = ["/.github/*"]
edition = "2021"
rust-version = "1.60.0"

[package.metadata.docs.rs]
features = ["std", "libm", "serde", "unstable"]
rustdoc-args = ["--html-in-header", "katex.html"]

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.num-integer]
version = "0.1.46"

[dependencies.serde]
optional = true
version = "1.0"
default-features = false

[features]
default = ["std"]
std = ["num-traits/std"]
libm = ["num-traits/libm"]
unstable = []
serde = ["dep:serde"]
