[package]
authors = ["Ralph Tandetzky"]
description = "Quaternion numbers implementation for Rust"
documentation = "https://docs.rs/num-quaternion"
homepage = "https://github.com/ralphtandetzky/num-quaternion"
keywords = ["quaternion", "math", "algebra", "3d", "rotation"]
categories = ["algorithms", "data-structures", "science", "no-std", "mathematics"]
license = "MIT OR Apache-2.0"
name = "num-quaternion"
repository = "https://github.com/ralphtandetzky/num-quaternion"
version = "1.0.3"
readme = "README.md"
exclude = ["/.github/*"]
edition = "2021"
rust-version = "1.63.0"

[package.metadata.docs.rs]
features = ["std", "libm", "serde", "unstable"]
rustdoc-args = ["--html-in-header", "katex.html"]

[[bench]]
name = "norm_runtime"
harness = false

[[example]]
name = "benchmark_norm_accuracy"
required-features = ["std", "rand"]

[[example]]
name = "pose_animation"
required-features = ["std"]

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.num-integer]
version = "0.1.46"
default-features = false

[dependencies.serde]
optional = true
version = "1.0"
default-features = false

[dependencies.rand]
optional = true
version = "0.9"
default-features = false
features = ["small_rng"]  # Needed only for testing. TODO: Move tests outside lib.rs and make this a development dependency

[dev-dependencies.criterion]
version = "0.5"

[dev-dependencies.micromath]
version = "2.1"
features = ["quaternion", "vector"]

[dev-dependencies.nalgebra]
version = "0.33"

[dev-dependencies.quaternion]
version = "2.0"

[dev-dependencies.quaternion-core]
version = "0.5"

[dependencies.rand_distr]
optional = true
version = ">=0.5.1"
default-features = false

[dev-dependencies.serde_json]
version = "1.0"

[features]
default = ["std"]
std = ["num-traits/std"]
libm = ["num-traits/libm"]
rand = ["dep:rand", "dep:rand_distr"]
serde = ["dep:serde"]
unstable = []
