load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "from_euler_angles_runtime",
    srcs = ["from_euler_angles_runtime.cpp"],
    deps = [
        "@boost.qvm//:boost.qvm",
        "@eigen//:eigen",
        "@google_benchmark//:benchmark",
    ],
)

cc_binary(
    name = "norm_accuracy",
    srcs = ["norm_accuracy.cpp"],
    deps = [
        "@boost.qvm//:boost.qvm",
        "@eigen//:eigen",
    ],
)

cc_binary(
    name = "norm_runtime",
    srcs = ["norm_runtime.cpp"],
    deps = [
        "@boost.qvm//:boost.qvm",
        "@eigen//:eigen",
        "@google_benchmark//:benchmark",
    ],
)
