bazel_dep(name = "boost.qvm", version = "1.90.0.bcr.1")
bazel_dep(name = "eigen", version = "5.0.1.bcr.1")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "rules_cc", version = "0.2.21")
bazel_dep(name = "bazel_clang_tidy", version = "0.0.0")
git_override(
    module_name = "bazel_clang_tidy",
    commit = "c4d35e0d0b838309358e57a2efed831780f85cd0",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)

bazel_dep(name = "toolchains_llvm", version = "1.8.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.7",
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")
register_toolchains("@llvm_toolchain//:all")
