bazel_dep(name = "boost.qvm", version = "1.90.0.bcr.1")
bazel_dep(name = "eigen", version = "5.0.1.bcr.1")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "toolchains_llvm", version = "1.8.0")
bazel_dep(name = "bazel_clang_tidy", version = "0.0.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    cxx_standard = {"": "c++20"},
    llvm_version = "17.0.6",
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

git_override(
    module_name = "bazel_clang_tidy",
    commit = "9e54bbb15d1939a9d030c52f3032886a0b278f98",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)
